<resources>

    <string name="app_name">MyMediaPlayer</string>
    <string name="title">Playlist maker</string>
    <string name="media_name">Media library</string>
    <string name="find_name">Search</string>
    <string name="settings">Settings</string>
    <string name="searching">Searching</string>
    <string name="dark_mode">Dark theme</string>
    <string name="app_share">Share the app</string>
    <string name="support_apply">Write to support</string>
    <string name="user_agreement">User agreement</string>
    <string name="input_hint">Search</string>
    <string name="message_share_app">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="messageSupport">Thanks to the developers and developers for the cool app!</string>
    <string name="messageSupportTheme">Message to the developers and developers of the PlaylistMaker app</string>
    <string name="user_agreement_address">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nameTrack1">Smells Like Teen Spirit</string>
    <string name="nameTrack2">Billie Jean</string>
    <string name="nameTrack3">Stayin\' Alive</string>
    <string name="nameTrack4">Whole Lotta Love</string>
    <string name="nameTrack5">Sweet Child O\'Mine</string>
    <string name="artistTrack1">Nirvana</string>
    <string name="artistTrack2">Michael Jackson</string>
    <string name="artistTrack3">Bee Gees</string>
    <string name="artistTrack4">Led Zeppelin</string>
    <string name="artistTrack5">Guns N\' Roses</string>
    <string name="timeTrack1">5:01</string>
    <string name="timeTrack2">4:35</string>
    <string name="timeTrack3">4:10</string>
    <string name="timeTrack4">5:33</string>
    <string name="timeTrack5">5:03</string>
    <string name="imageUrlTrack1">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="imageUrlTrack2">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="imageUrlTrack3">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="imageUrlTrack4">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="imageUrlTrack5">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="nothing_found">Nothing was found</string>
    <string name="something_went_wrong">
        Communication problems \n\n
        The download failed. Check your internet connection.
    </string>
    <string name="update">Update</string>
    <string name="youSearched">You are searched</string>
    <string name="clearHistory">Clear history</string>
    <string name="cover_image"></string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="play">Play track</string>
    <string name="playing_time">00:00</string>
    <string name="track_time">Playing time</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">Genere</string>
    <string name="country">Country</string>
</resources>