<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/MainScreen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/button_text_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="17dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_find"
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:text="@string/find_name"
            app:icon="@drawable/search_light_mode"

            />


        <Button
            android:id="@+id/button_media"
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:text="@string/media_name"
            app:icon="@drawable/media_light_mode"

            />


        <Button
            android:id="@+id/button_tuning"
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:text="@string/settings"
            app:icon="@drawable/setting_vector"

            />

    </LinearLayout>

</LinearLayout>