<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/button_arrow_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/white"
            android:scaleType="center"
            android:src="@drawable/arrow_back"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/btn_text_color"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="208dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_bold"
            android:letterSpacing="0"
            android:paddingStart="12dp"
            android:paddingTop="14dp"
            android:text="@string/settings"
            android:textColor="@color/text_settings_color"
            android:textSize="@dimen/button_text_size" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dark_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:letterSpacing="0"
            android:maxWidth="300dp"
            android:paddingStart="@dimen/setting_txt_start"
            android:paddingLeft="@dimen/setting_txt_start"
            android:paddingTop="@dimen/setting_txt_top"
            android:paddingRight="@dimen/setting_txt_end"
            android:paddingBottom="@dimen/setting_txt_bottom"
            android:text="@string/dark_mode"
            android:textColor="@color/text_settings_color"
            android:textSize="@dimen/setting_text_size" />


        <androidx.appcompat.widget.SwitchCompat

            android:id="@+id/mySwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:scaleType="centerCrop" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/app_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:letterSpacing="0"
            android:maxWidth="300dp"
            android:paddingStart="@dimen/setting_txt_start"
            android:paddingLeft="@dimen/setting_txt_start"
            android:paddingTop="@dimen/setting_txt_top"
            android:paddingRight="@dimen/setting_txt_end"
            android:paddingBottom="@dimen/setting_txt_bottom"
            android:text="@string/app_share"
            android:textColor="@color/text_settings_color"
            android:textSize="@dimen/setting_text_size" />


        <Button
            android:id="@+id/button_share_app"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:gravity="end"
            android:scaleType="center"
            app:icon="@drawable/icon_share_app"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/icon_color"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/support_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:letterSpacing="0"
            android:maxWidth="300dp"
            android:paddingStart="@dimen/setting_txt_start"
            android:paddingLeft="@dimen/setting_txt_start"
            android:paddingTop="@dimen/setting_txt_top"
            android:paddingRight="@dimen/setting_txt_end"
            android:paddingBottom="@dimen/setting_txt_bottom"
            android:text="@string/support_apply"
            android:textColor="@color/text_settings_color"
            android:textSize="@dimen/setting_text_size" />


        <Button
            android:id="@+id/button_support"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:gravity="end"
            android:scaleType="center"
            app:icon="@drawable/icon_support"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/icon_color"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:letterSpacing="0"
            android:maxWidth="300dp"
            android:paddingStart="@dimen/setting_txt_start"
            android:paddingLeft="@dimen/setting_txt_start"
            android:paddingTop="@dimen/setting_txt_top"
            android:paddingRight="@dimen/setting_txt_end"
            android:paddingBottom="@dimen/setting_txt_bottom"
            android:text="@string/user_agreement"
            android:textColor="@color/text_settings_color"
            android:textSize="@dimen/setting_text_size" />


        <Button
            android:id="@+id/button_arrow_forward"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:gravity="end"
            android:scaleType="center"
            app:icon="@drawable/icon_arrow_forward"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/icon_color"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>


</LinearLayout>