<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayerActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/player_back_menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/margin_size_24"
        android:layout_marginStart="@dimen/margin_size_4"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="@color/btn_text_color" />

    <ImageView
        android:id="@+id/album"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_size_8"
        android:layout_marginEnd="@dimen/margin_size_8"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_back_menu"
        app:srcCompat="@drawable/album1" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_8"
        android:layout_marginEnd="@dimen/margin_size_8"
        android:fontFamily="@font/ys_text_medium"
        android:textSize="@dimen/button_text_size"
        android:letterSpacing="0"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/album"
        tools:text="trackName"/>

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_8"
        android:layout_marginEnd="@dimen/margin_size_8"
        android:layout_marginTop="@dimen/margin_size_12"
        android:layout_marginBottom="@dimen/margin_size_54"
        android:fontFamily="@font/ys_text_medium"
        android:textSize="@dimen/ys_medium_14_text"
        android:letterSpacing="0"
        android:textFontWeight="400"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tools:text="artistName"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_to_playlist"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_margin="8dp"
        android:contentDescription="@string/add_to_playlist"
        android:foregroundGravity="center"
        android:src="@drawable/icon_plus_light"
        app:backgroundTint="@color/player_like_button"
        app:elevation="0dp"
        app:fabCustomSize="@dimen/button_size"
        app:layout_constraintBottom_toBottomOf="@id/button_play"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@id/button_play"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:layout_constraintTop_toTopOf="@id/button_play"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_play"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:contentDescription="@string/play"
        android:foregroundGravity="center"
        android:src="@drawable/icon_play_light"
        app:backgroundTint="@color/fab_play_button"
        app:elevation="0dp"
        app:fabCustomSize="84dp"
        app:layout_constraintBottom_toTopOf="@id/playing_time"
        app:layout_constraintStart_toEndOf="@id/button_add_to_playlist"
        app:layout_constraintEnd_toStartOf="@id/button_add_to_favorite"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        app:maxImageSize="84dp"
        app:tint="@color/fab_background_play_button" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_to_favorite"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/add_to_favorite"
        android:foregroundGravity="center"
        android:src="@drawable/icon_heart"
        app:backgroundTint="@color/player_like_button"
        app:elevation="0dp"
        app:fabCustomSize="@dimen/button_size"
        app:layout_constraintBottom_toBottomOf="@id/button_play"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/button_play"
        app:layout_constraintStart_toEndOf="@id/button_play"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_12"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/playing_time"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/ys_medium_14_text"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/button_play"
        app:layout_constraintWidth_max="64dp" />

    <TextView
        android:id="@+id/playing_time"
        style="@style/TitleTrack"
        android:text="@string/playing_time"
        app:layout_constraintTag=""
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/progress"
         />


</androidx.constraintlayout.widget.ConstraintLayout>